1.0.3-dev

 * #18: Fix for README mention of sample files not included in package.
 * #22: Sample files for triggering borgmatic from a systemd timer.
 * Added logo.

1.0.3

 * #21: Fix for verbosity flag not actually causing verbose output.

1.0.2

 * #20: Fix for traceback when remote_path option is missing.

1.0.1

 * #19: Support for Borg's --remote-path option to use an alternate Borg
   executable. See sample/config.

1.0.0

 * Attic is no longer supported, as there hasn't been any recent development on
   it. Dropping Attic support will allow faster iteration on Borg-specific
   features. If you're still using Attic, this is a good time to switch to Borg!
 * Project renamed from atticmatic to borgmatic. See the borgmatic README for
   information on upgrading.

0.1.8

 * Fix for handling of spaces in source_directories which resulted in backup up everything.
 * Fix for broken links to Borg documentation.
 * At verbosity zero, suppressing Borg check stderr spew about "Checking segments".
 * Support for Borg --one-file-system.
 * Support for Borg create --umask.
 * Support for file globs in source_directories.

0.1.7

 * #11: Fixed parsing of punctuation in configuration file.
 * Better error message when configuration file is missing.

0.1.6

 * #9: New configuration option for the encryption passphrase.
 * #10: Support for Borg's new archive compression feature.

0.1.5

 * Changes to support release on PyPI. Now pip installable by name!

0.1.4

 * Adding test that setup.py version matches release version.

0.1.3

 * #1: Add support for "borg check --last N" to Borg backend.

0.1.2

 * As a convenience to new users, allow a missing default excludes file.
 * New issue tracker, linked from documentation.

0.1.1

 * Adding borgmatic cron example, and updating documentation to refer to it.

0.1.0

 * New "borgmatic" command to support Borg backup software, a fork of Attic.

0.0.7

 * Flag for multiple levels of verbosity: some, and lots.